# edge-inference-engine

./: .gitignore  Cargo.toml  README.md
src/: config.rs  engine.rs  main.rs  state.rs
src/engine/: mod.rs  pipeline.rs  worker.rs
src/handlers/: chat.rs  mod.rs
