[package]
name = "edge-llm-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream = "0.3.6"
axum = "0.8.9"
encoding_rs = "0.8.35"
futures-util = "0.3.32"
llama-cpp-2 = "0.1.150"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
tower-http = "0.7.0"
